Fix dropdowns that are too tall

--- a/source/content.css
+++ b/source/content.css
@@ -792,7 +792,7 @@ a.tabnav-extra[href$='mastering-markdown/'] {
 	/* Must be above .modal-backdrop (z-index 20) #1317 and below .select-menu.active (z-index 30) */
 	z-index: 25;
 }
-:root .select-menu-list {
+.issues-listing .table-list-header .select-menu-list {
 	/* Since the header is sticky, filters must now fit the viewport */
 	max-height: calc(100vh - 150px);
 }
